# trident

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  TODO.md
.claude/plans/: 4d-verification-framework.md
.cortex/plans/: audit-correctness.md  fuckups-neural-v2.md  neural-v2-implementation.md  poseidon2-commitment-phase.md  rosetta-stone-unification.md  trinity-benchmark.md  trinity-explainer.md
benches/: README.md  conditional_auth.baseline.tasm  conditional_auth.tri  end_to_end.rs  field_arithmetic.tri  hash_chain.baseline.tasm  hash_chain.tri  hash_preimage.tri  loop_sum.tri  merkle_verify3.tri  sponge_absorb.baseline.tasm  sponge_absorb.tri  token_transfer.baseline.tasm  token_transfer.tri
data/neural/: meta.toml  meta_lite.toml
docs/: README.md  ROADMAP.md  TODO.md  analysis.md  compiling-a-program.md  deploying-a-program.md  errors.md  for-blockchain-devs.md  for-developers.md  ir.md  optimization.md  programming-model.md  reference.md  running-a-program.md  spec.md  stark-proofs.md  tutorial.md  universal-design.md  verifying-proofs.md  vision.md  writing-a-program.md
docs/explanation/: README.md  ai.md  analysis.md  atlas.md  content-addressed.md  content-addressing.md  cyber-license.md  for-blockchain-devs.md  for-developers.md  for-offchain-devs.md  for-onchain-devs.md  formal-verification.md  from-gpt.md  gold-standard.md  multi-target.md  neural-tir-tasm-compiler-v2.md  os-abstraction.md  privacy.md  programming-model.md  provable-computing.md  quantum.md  skill-library.md  stark-proofs.md  stdlib.md  trinity-bench.md  universal-design.md  universal-execution.md  vision.md
docs/guides/: compiling-a-program.md  deploying-a-program.md  generating-proofs.md  optimization.md  prompts.md  running-a-program.md  verifying-proofs.md  writing-a-program.md
docs/reference/: README.md  briefing.md  cli.md  errors.md  grammar.md  integration.md  ir.md  language.md  os.md  patterns.md  provable.md  reference.md  spec.md  stdlib.md  targets.md  tsp1-coin.md  tsp2-card.md  vm.md
docs/tutorials/: build-a-coin.md  build-a-dao.md  (+8 more)
os/: README.md  aleo.toml  android.toml  aptos.toml  arbitrum.toml  aztec.toml  boundless.toml  browser.toml  cosmwasm.toml  ethereum.toml  icp.toml  linux.toml  macos.toml  miden.toml  near.toml  neptune.toml  nervos.toml  nockchain.toml  openvm-network.toml  polkadot.toml  solana.toml  starknet.toml  succinct.toml  sui.toml  ton.toml  wasi.toml
reference/: README.md  briefing.md  cli.md  errors.md  grammar.md  ir.md  language.md  neural-optimizer.md  os.md  quality.md  roadmap.md  skills.md  stdlib.md  targets.md  tsp1-coin.md  tsp2-card.md  vm.md
src/: README.md  ast.rs  cost.rs  deploy.rs  diagnostic.rs  doc.rs  emit.rs  equiv.rs  format.rs  hash.rs  lexeme.rs  lexer.rs  lib.rs  linker.rs  lsp.rs  main.rs  onchain.rs  package.rs  parser.rs  poseidon2.rs  project.rs  resolve.rs  smt.rs  solve.rs  span.rs  stack.rs  sym.rs  synthesize.rs  target.rs  trident_lsp.rs  typeck.rs  types.rs  ucm.rs  view.rs
std/: assert.tri  auth.tri  convert.tri  field.tri  hash.tri  io.tri  mem.tri  merkle.tri  storage.tri  u32.tri  xfield.tri
targets/: aztec.toml  ckb.toml  jolt.toml  movevm.toml  polkavm.toml  tvm.toml  wasm.toml
tests/: audit_stdlib.rs
vm/: README.md  arm64.toml  avm.toml  aztec.toml  cairo.toml  ckb.toml  evm.toml  jolt.toml  leo.toml  miden.toml  movevm.toml  nock.toml  openvm.toml  polkavm.toml  riscv.toml  risczero.toml  sbpf.toml  sp1.toml  svm.toml  triton.toml  tvm.toml  wasm.toml  x86-64.toml
(+535 files in other folders)
