[package]
name = "trident-lang"
version = "0.1.0"
edition = "2021"
description = "A minimal, security-first universal language for provable computation"
license-file = "LICENSE.md"
repository = "https://github.com/mastercyb/trident"
homepage = "https://github.com/mastercyb/trident"
readme = "README.md"
keywords = ["zk", "provable", "compiler", "blockchain", "zero-knowledge"]
categories = ["compilers", "cryptography"]
exclude = ["docs/", "examples/", "tests/snapshots/"]

[lib]
name = "trident"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ariadne = "0.4"
blake3 = "1"
tower-lsp = "0.20"
tokio = { version = "1", features = ["io-std", "rt-multi-thread", "macros"] }

[dev-dependencies]
insta = "1"
tempfile = "3"

[[bin]]
name = "trident"
path = "src/main.rs"

[[bin]]
name = "trident-lsp"
path = "src/bin/trident-lsp.rs"
