[package]
name = "trident-lang"
version = "0.1.0"
edition = "2021"
description = "A minimal, security-first universal language for provable computation"
license-file = "LICENSE.md"
repository = "https://github.com/mastercyb/trident"
homepage = "https://github.com/mastercyb/trident"
readme = "README.md"
keywords = ["zk", "provable", "compiler", "blockchain", "zero-knowledge"]
categories = ["compilers", "cryptography"]
exclude = ["docs/", "examples/", "tests/snapshots/"]

[lib]
name = "trident"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ariadne = "0.4"
blake3 = "1"
tower-lsp = "0.20"
tokio = { version = "1", features = ["io-std", "rt-multi-thread", "macros"] }
wgpu = "24"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
burn = { version = "0.20", features = ["wgpu", "autodiff", "ndarray"] }
rayon = "1.10"
petgraph = "0.7"
serde = { version = "1", features = ["derive"] }
rkyv = { version = "0.8", features = ["bytecheck"] }
statrs = "0.18"

[dev-dependencies]
insta = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "trident"
path = "src/main.rs"

[[bin]]
name = "trident-lsp"
path = "src/bin/trident-lsp.rs"

[[bench]]
name = "end_to_end"
harness = false

[[example]]
name = "ref_std_crypto_poseidon2"
path = "benches/std/crypto/poseidon2.reference.rs"

[[example]]
name = "ref_std_crypto_poseidon"
path = "benches/std/crypto/poseidon.reference.rs"

[[example]]
name = "ref_std_crypto_bigint"
path = "benches/std/crypto/bigint.reference.rs"

[[example]]
name = "ref_std_crypto_merkle"
path = "benches/std/crypto/merkle.reference.rs"

[[example]]
name = "ref_std_quantum_gates"
path = "benches/std/quantum/gates.reference.rs"

[[example]]
name = "ref_std_nn_tensor"
path = "benches/std/nn/tensor.reference.rs"

[[example]]
name = "ref_std_private_poly"
path = "benches/std/private/poly.reference.rs"

[[example]]
name = "ref_std_trinity_inference"
path = "benches/std/trinity/inference.reference.rs"
